# LLM-Projects

./: ats.py
AI Tools Suggestion/: README.md  main.py  pyproject.toml  requirements.txt
AI Tools Suggestion/main files/: multiAgent.py  open_router.py
AI Tools Suggestion/notebooks/: multiAgent.ipynb  openrouter.ipynb
ChatBot Grok/: README.md  app.py  demo.md  main.py  pyproject.toml
Financial Agent/: .env  README.md  financial_agent.py  playground.py  requirements.txt
Github Agent/: .env  README.md  app.py  demo.md  fetch.py  read_content.py  repo_structure.json
Pdf_Analyser/: pdf_analyser.py  requirements.txt
chatbot/: requirements.txt
